# minecraft-clone

./: .gitignore  Cargo.toml
src/: main.rs
src/debug/: wireframe.rs
src/engine/: atlas.rs  block.rs  camera.rs  chunk.rs  cube.rs  face_direction.rs  mesh_builder.rs  mod.rs  world.rs
src/engine/world/: biome.rs  block.rs  chunk.rs  chunk_meshing.rs  climate_sampler.rs  generation.rs  mod.rs  streaming.rs  structure.rs
src/engine/world/biomes/: desert.rs  jungle.rs  mod.rs  plains.rs  terrain_noise.rs  tundra.rs
